test/integration/page-config/pages/invalid/export-from.js
// export { config } from '../../config'

export default () => <p>hello world</p>
